# vsp-otel

./: .eslintrc.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.python-lib  README.md  SECURITY.md  STATUS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dco.yml  fuzz.yml  lockfile-registry.yml  overclaim-guard.yml  pin-check.yml  python-ci.yml  sbom.yml  scorecard.yml  slsa.yml  tests.yml  trivy.yml
collector/: __init__.py  app.py  dsse.py  lambda_gate.py  requirements.txt  stats.py
deploy/: otel-collector-config.yaml
deploy/helm/vsp-otel/: Chart.yaml  values.yaml
docs/: GENAI_SEMCONV.md  INTEGRATION.md
runtime/: README.md  package.json  tsconfig.json
runtime/src/: exporter.test.ts  exporter.ts  server.ts
src/pipeline/: dpi_soundness.ts
src/redaction/: scitt_mask_entropy.ts
src/sla/: relay_latency_gate.ts
src/vsp_otel/: README.md  __init__.py  dsse_processor.py  exporter.py  middleware.py
stubs/ouroboros-lambda-gate/: index.d.ts  index.js  package.json
stubs/ouroboros-types/: index.d.ts  index.js  package.json
test/: dpi_soundness.test.ts  lean_binding_drift.test.ts  relay_latency.test.ts  scitt_mask_entropy.test.ts
tests/: test_collector.py  test_dsse_binding.py  test_exporter.py  test_integration.py
(+11 files in other folders)
